--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -1,49 +1,310 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Raleway', sans-serif;
-    font-size: 30px;
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Raleway', sans-serif;
+  font-size: 30px;
 }
 
-.header{
-    background-color: black;
-    min-height: 50px;
-    display: flex;
+/* Header Styles */
+.header {
+  background-color: black;
+  min-height: 7%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.navbar {
+  margin: 0;
+  padding: 0;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.interaction-links {
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.user-links {
+  width: 30%;
+  margin: 0 25px 0 175px;
+  display: flex;
+  justify-content: space-between;
+}
+#userLogout {
+  color: #fff;
+  text-decoration: none;
+}
+.profile-link {
+  width: 20%;
+  color: #fff;
+  text-decoration: none;
+  justify-self: flex-start;
+  margin: 0 0px 0 30px;
+}
+.navbar__item {
+  color: #fff;
+  text-decoration: none;
+}
+
+/* Home Styles */
+#home {
+  margin: 0;
+  padding: 0;
+  height: 93%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+    url(./images/compassBarber.jpg);
+  background-size: 100%;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.color-white {
+  color: #fff;
+}
+
+.homeMsg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.intro h1 {
+  text-align: center;
+}
+
+/* Register Page */
+
+.register {
+  width: 100%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(12, 10, 10, 0.8)),
+    url(https://wallpapers.com/images/hd/barber-shop-background-c8pq8le29lkcb64m.jpg);
+  background-size: 100%;
+  background-position: center;
+  height: 93%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.register-container {
+  width: 30%;
+  border-radius: 10px;
+  background-image: linear-gradient(rgba(5, 5, 5, 0.75), rgba(7, 7, 7, 0.75)),
+    url(https://fabricville.com/cdn/shop/products/QC587-003-002_1024x.jpg?v=1624386525);
+  background-size: 100%;
+  background-position: center;
+  /* width: 20%; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+form {
+  color: #fff;
+  display: block;
+  margin: 20px;
+}
+form label {
+  margin: 5px 0;
+  text-align: center;
+  font-size: 25px;
+  display: block;
+}
+form  input {
+  margin: 5px 0;
+  text-align: center;
+  opacity: 0.5;
+  font-size: 20px;
+  display: block;
+}
+.submitBtn {
+  color: black;
+  margin: 20px 0 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.submitBtn input {
+  border: 0;
+  border-radius: 5px;
+  cursor: pointer;
+  opacity: 0.7;
+  width: 100px;
+  color: #fff;
+  background-color: black;
+}
+.submitBtn input:hover {
+  cursor: pointer;
+  opacity: 0.4;
+  width: 100px;
+  color: black;
+  background-color: #fff;
+}
+
+.existingAccount {
+  display: flex;
+  justify-content: space-between;
+}
+
+.existingAccount a {
+  cursor: default;
+  text-decoration: none;
+  color: #fff;
+  font-size: 15px;
+}
+
+#SignIn {
+  color: #fff;
+  text-decoration: none;
+  letter-spacing: 0.15em;
+
+  display: flex;
+
+  position: relative;
+}
+#SignIn:hover {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  /* color: #0087ca; */
+}
+#SignIn::after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #33b3c4;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+#SignIn:hover:after {
+  width: 100%;
+  left: 0;
+}
+
+/* Login */
+.login {
+  width: 100%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(12, 10, 10, 0.8)),
+    url(https://wallpapers.com/images/hd/barber-shop-background-c8pq8le29lkcb64m.jpg);
+  background-size: 100%;
+  background-position: center;
+  height: 93%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-container {
+  width: 30%;
+  border-radius: 10px;
+  background-image: linear-gradient(rgba(5, 5, 5, 0.75), rgba(7, 7, 7, 0.75)),
+    url(https://fabricville.com/cdn/shop/products/QC587-003-002_1024x.jpg?v=1624386525);
+  background-size: 100%;
+  background-position: center;
+  /* width: 20%; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.login-form {
+  color: #fff;
+  display: block;
+  margin: 20px;
+}
+.login-form label {
+  margin: 5px 0;
+  text-align: center;
+  font-size: 25px;
+  display: block;
+}
+.login-form  input {
+  margin: 5px 0;
+  text-align: center;
+  opacity: 0.5;
+  font-size: 20px;
+  display: block;
+}
+.submitBtn {
+  color: black;
+  margin: 20px 0 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.submitBtn input {
     align-items: center;
-    justify-content: center;
+  border: 0;
+  border-radius: 5px;
+  cursor: pointer;
+  opacity: 0.7;
+  width: 100px;
+  color: #fff;
+  background-color: black;
+}
+.submitBtn input:hover {
+  cursor: pointer;
+  opacity: 0.4;
+  width: 100px;
+  color: black;
+  background-color: #fff;
 }
 
-.navbar{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.existingAccount {
+  display: flex;
+  justify-content: space-between;
 }
 
-.interaction-links{
-    width: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.existingAccount a {
+  cursor: default;
+  text-decoration: none;
+  color: #fff;
+  font-size: 15px;
 }
 
+#SignUp {
+  color: #fff;
+  text-decoration: none;
+  letter-spacing: 0.15em;
 
-#userLogout{
-    color: #fff;
-    text-decoration: none;
-    justify-self: flex-end;
-    margin: 0 50px;
+  display: flex;
+
+  position: relative;
 }
-#usernameNav{
-    color: #fff;
-    text-decoration: none;
-    justify-self: flex-start;
-    margin: 0 50px;
+#SignIn:hover {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  /* color: #0087ca; */
 }
-.navbar__item{
-    /* margin: 0 200px; */
-    color: #fff;
-    text-decoration: none;
+#SignIn::after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #33b3c4;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+#SignIn:hover:after {
+  width: 100%;
+  left: 0;
 }
