--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -146,7 +146,7 @@ form  input {
 }
 .submitBtn input:hover {
   cursor: pointer;
-  opacity: 0.4;
+  opacity: 0.7;
   width: 100px;
   color: black;
   background-color: #fff;
@@ -259,7 +259,7 @@ form  input {
 }
 .submitBtn input:hover {
   cursor: pointer;
-  opacity: 0.4;
+  opacity: 0.7;
   width: 100px;
   color: black;
   background-color: #fff;
@@ -286,13 +286,13 @@ form  input {
 
   position: relative;
 }
-#SignIn:hover {
+#SignUp:hover {
   cursor: pointer;
   display: inline-block;
   position: relative;
   /* color: #0087ca; */
 }
-#SignIn::after {
+#SignUp::after {
   background: none repeat scroll 0 0 transparent;
   bottom: 0;
   content: "";
@@ -304,7 +304,7 @@ form  input {
   transition: width 0.3s ease 0s, left 0.3s ease 0s;
   width: 0;
 }
-#SignIn:hover:after {
+#SignUp:hover:after {
   width: 100%;
   left: 0;
 }
