--- a/src/Views/home.html
+++ b/src/Views/home.html
@@ -15,13 +15,13 @@
             <div class="interaction-links">
                 <a class="navbar__item" href="./home.html">Home</a>
                 <a class="navbar__item" href="#">Dashboard</a>
-                <a class="navbar__item" href="#">Services</a>
+                <a class="navbar__item" href="./services.html">Services</a>
                 <a class="navbar__item" href="#">Products</a>
                 <a class="navbar__item" href="#">Post Haircut</a>
             </div>
             
             <div class="user-links">
-                <a class="navbar__item" href="#">Login</a>
+                <a class="navbar__item" href="./login.html">Login</a>
                 <a class="navbar__item" href="./register.html">Register</a>
                 <a id="userLogout" href="#">Logout</a>
             </div>
