--- a/src/Views/login.html
+++ b/src/Views/login.html
@@ -15,11 +15,11 @@
             <div class="interaction-links">
                 <a class="navbar__item" href="./home.html">Home</a>
                 <a class="navbar__item" href="#">Dashboard</a>
-                <a class="navbar__item" href="#">Services</a>
+                <a class="navbar__item" href="./services.html">Services</a>
                 <a class="navbar__item" href="#">Products</a>
                 <a class="navbar__item" href="#">Post Haircut</a>
             </div>
-
+            
             <div class="user-links">
                 <a class="navbar__item" href="./login.html">Login</a>
                 <a class="navbar__item" href="./register.html">Register</a>
@@ -36,8 +36,9 @@
                 <input type="text" name="email" placeholder="example@abv.bg">
                 <label for="password">Password</label>
                 <input type="password" name="password" placeholder="Enter your password..">
-
-                <input type="button" value="SIGN IN">
+                <div class="submitBtn">
+                    <input type="button" value="SIGN UP">
+                </div>
                 <div class="existingAccount">
                     <a href="javascript:void(0)">Don't have an account?</a>
                     <a href="#" id="SignUp"> Sign Up</a>
