--- a/src/Views/register.html
+++ b/src/Views/register.html
@@ -15,7 +15,7 @@
             <div class="interaction-links">
                 <a class="navbar__item" href="./home.html">Home</a>
                 <a class="navbar__item" href="#">Dashboard</a>
-                <a class="navbar__item" href="#">Services</a>
+                <a class="navbar__item" href="./services.html">Services</a>
                 <a class="navbar__item" href="#">Products</a>
                 <a class="navbar__item" href="#">Post Haircut</a>
             </div>
@@ -43,7 +43,7 @@
                 <label for="repeatPassword">Repeat Password</label>
                 <input type="password" name="repeatPassword" placeholder="Repeat your password..">
                 <div class="submitBtn">
-                    <input type="button" value="SIGN IN">
+                    <input type="button" value="SIGN UP">
                 </div>
                 <div class="existingAccount">
                 <a  href="javascript:void(0)">Already have an account?</a>
