--- a/src/Views/services.html
+++ b/src/Views/services.html
@@ -29,9 +29,39 @@
         </nav>
 
     </header>
-<main class="services">
-    <div class="servicesContainer">
-        <h1>Here are our services.</h1>
+<main class="services color-white">
+    <div class="servicesParentContainer">
+        <p id="serviceHeading">Here are our services.</p>
+        <div class="servicesChildContainer">
+            <div class="serviceCard" style="background-image: linear-gradient(rgba(32, 32, 32, 0.7), rgba(26, 25, 25, 0.7)),
+url(https://cdn1.vectorstock.com/i/1000x1000/52/20/hair-cut-template-for-barber-shop-vector-33115220.jpg); background-size: cover;">
+                <h2>Haircuts</h5>
+                <div class="cardInsights">
+                    
+                </div>
+            </div>
+            <div class="serviceCard" style="background-image: linear-gradient(rgba(32, 32, 32, 0.7), rgba(26, 25, 25, 0.7)),
+url(https://cdn1.vectorstock.com/i/1000x1000/52/20/hair-cut-template-for-barber-shop-vector-33115220.jpg); background-size: cover;">
+                <h2>Beard Trimming</h5>
+                <div class="cardInsights">
+                    
+                </div>
+            </div>
+            <div class="serviceCard" style="background-image: linear-gradient(rgba(32, 32, 32, 0.7), rgba(26, 25, 25, 0.7)),
+url(https://cdn1.vectorstock.com/i/1000x1000/52/20/hair-cut-template-for-barber-shop-vector-33115220.jpg); background-size: cover;">
+                <h2>Wax</h5>
+                <div class="cardInsights">
+                    
+                </div>
+            </div>
+            <div class="serviceCard" style="background-image: linear-gradient(rgba(32, 32, 32, 0.7), rgba(26, 25, 25, 0.7)),
+url(https://cdn1.vectorstock.com/i/1000x1000/52/20/hair-cut-template-for-barber-shop-vector-33115220.jpg); background-size: cover;">
+                <h2>Face Masks</h5>
+                <div class="cardInsights">
+                    
+                </div>
+            </div>
+        </div>
     </div>
 </main>
     <script src="./app.js"></script>
