--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Raleway:wght@100&display=swap');
 html,
 body {
   height: 100%;
@@ -61,7 +62,7 @@ body {
   padding: 0;
   height: 93%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-    url(./images/compassBarber.jpg);
+    url(https://wallpapers.com/images/hd/barber-shop-background-c8pq8le29lkcb64m.jpg);
   background-size: 100%;
   background-position: center;
   display: flex;
@@ -307,4 +308,68 @@ form  input {
 #SignUp:hover:after {
   width: 100%;
   left: 0;
+}
+
+                    /* Services */
+
+.services{
+  width: 100%;
+  height: 93%;
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(12, 10, 10, 0.8)),
+    url(https://wallpapers.com/images/hd/barber-shop-background-c8pq8le29lkcb64m.jpg);
+  background-size: 100%;
+  background-position: center;
+}
+
+.servicesParentContainer{
+  width: 100%;
+  height: 100%;
+  /* display: flex; */
+  justify-content: center;
+  text-align: center;
+  /* margin: 50px; */
+}
+
+#serviceHeading{
+  height: fit-content;
+  position: relative;
+  top: 100px;
+  font-size: 60px;
+  font-weight: bolder;
+  text-shadow: 3px 3px grey;
+  /* left: 860px; */
+}
+
+.servicesChildContainer{
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  top: 200px;
+  /* left: -150px; */
+}
+
+.serviceCard{
+  width: 350px;
+  height: 400px;
+  display: flex;
+  text-shadow: 5px 5px #131313;
+  font-family: 'Agbalumo';
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: 10px rgba(255, 255, 255, 0.5);
+  border-style:double;
+  border-radius: 10px;
+}
+
+.serviceCard:hover{
+  border: 10px solid #fff;
+  border-style:double;
+  border-op
 }
