--- a/src/Views/register.html
+++ b/src/Views/register.html
@@ -16,7 +16,7 @@
                 <a class="navbar__item" href="./home.html">Home</a>
                 <a class="navbar__item" href="#">Dashboard</a>
                 <a class="navbar__item" href="./services.html">Services</a>
-                <a class="navbar__item" href="#">Products</a>
+                <a class="navbar__item" href="./products.html">Products</a>
                 <a class="navbar__item" href="#">Post Haircut</a>
             </div>
             
