--- a/src/Views/services.html
+++ b/src/Views/services.html
@@ -16,7 +16,7 @@
                 <a class="navbar__item" href="./home.html">Home</a>
                 <a class="navbar__item" href="#">Dashboard</a>
                 <a class="navbar__item" href="./services.html">Services</a>
-                <a class="navbar__item" href="#">Products</a>
+                <a class="navbar__item" href="./products.html">Products</a>
                 <a class="navbar__item" href="#">Post Haircut</a>
             </div>
             
@@ -36,29 +36,29 @@
             <div class="serviceCard" style="background-image: linear-gradient(rgba(32, 32, 32, 0.7), rgba(26, 25, 25, 0.7)),
 url(https://cdn1.vectorstock.com/i/1000x1000/52/20/hair-cut-template-for-barber-shop-vector-33115220.jpg); background-size: cover;">
                 <h2>Haircuts</h5>
-                <div class="cardInsights">
-                    
+                <div class="cardInsights" style="display: none;">
+                    Click for more details.
                 </div>
             </div>
             <div class="serviceCard" style="background-image: linear-gradient(rgba(32, 32, 32, 0.7), rgba(26, 25, 25, 0.7)),
 url(https://cdn1.vectorstock.com/i/1000x1000/52/20/hair-cut-template-for-barber-shop-vector-33115220.jpg); background-size: cover;">
                 <h2>Beard Trimming</h5>
-                <div class="cardInsights">
-                    
+                <div class="cardInsights " style="display: none;">
+                    Click for more details.
                 </div>
             </div>
             <div class="serviceCard" style="background-image: linear-gradient(rgba(32, 32, 32, 0.7), rgba(26, 25, 25, 0.7)),
 url(https://cdn1.vectorstock.com/i/1000x1000/52/20/hair-cut-template-for-barber-shop-vector-33115220.jpg); background-size: cover;">
                 <h2>Wax</h5>
-                <div class="cardInsights">
-                    
+                <div class="cardInsights" style="display: none;">
+                    Click for more details.
                 </div>
             </div>
             <div class="serviceCard" style="background-image: linear-gradient(rgba(32, 32, 32, 0.7), rgba(26, 25, 25, 0.7)),
 url(https://cdn1.vectorstock.com/i/1000x1000/52/20/hair-cut-template-for-barber-shop-vector-33115220.jpg); background-size: cover;">
                 <h2>Face Masks</h5>
-                <div class="cardInsights">
-                    
+                <div class="cardInsights" style="display: none;">
+                    Click for more details.
                 </div>
             </div>
         </div>
