+initiate products page

--- a/src/Views/products.html
+++ b/src/Views/products.html
@@ -35,8 +35,9 @@
                 <div class="serviceCard" style="background-image: linear-gradient(rgba(32, 32, 32, 0.7), rgba(26, 25, 25, 0.7)),
     url(https://cdn1.vectorstock.com/i/1000x1000/52/20/hair-cut-template-for-barber-shop-vector-33115220.jpg); background-size: cover;">
                     <h2>Haircuts</h5>
-                    <div class="cardInsights" style="display: none;">
-                        Click for more details.
+                    <div class="cardInsights" >
+                        <h4>Haircuts</h4>
+                        <p>Click for more details.</p>
                     </div>
                 </div>
 
