--- a/src/Views/products.html
+++ b/src/Views/products.html
@@ -31,13 +31,76 @@
     </header>
     <main class="products">
         <div class="productsParentContainer">
+            <h2 id="productsHeading">Our Products:</h2>
             <div class="productChildContainer">
-                <div class="serviceCard" style="background-image: linear-gradient(rgba(32, 32, 32, 0.7), rgba(26, 25, 25, 0.7)),
-    url(https://cdn1.vectorstock.com/i/1000x1000/52/20/hair-cut-template-for-barber-shop-vector-33115220.jpg); background-size: cover;">
-                    <h2>Haircuts</h5>
-                    <div class="cardInsights" >
-                        <h4>Haircuts</h4>
-                        <p>Click for more details.</p>
+                <div class="productCard">
+                    <img src="https://i00.eu/img/711/1024x1024/ex7ssuk0/16041.jpg" alt="Product Image"/>
+                    <div class="cardDetails">
+                        <div class="insideCard">
+                            <p class="color-white">Matte Pomade</p>
+                            <p><span class="color-white">Price: $5.99</span></p>
+                        </div>
+                        <a href="#" id="detailsBtn">Details</a>
+                    </div>
+                </div>
+                <div class="productCard">
+                    <img src="https://i00.eu/img/711/1024x1024/ex7ssuk0/16041.jpg" alt="Product Image"/>
+                    <div class="cardDetails">
+                        <div class="insideCard">
+                            <p class="color-white">Matte Pomade</p>
+                            <p><span class="color-white">Price: $5.99</span></p>
+                        </div>
+                        <a href="#" id="detailsBtn">Details</a>
+                    </div>
+                </div>
+                <div class="productCard">
+                    <img src="https://i00.eu/img/711/1024x1024/ex7ssuk0/16041.jpg" alt="Product Image"/>
+                    <div class="cardDetails">
+                        <div class="insideCard">
+                            <p class="color-white">Matte Pomade</p>
+                            <p><span class="color-white">Price: $5.99</span></p>
+                        </div>
+                        <a href="#" id="detailsBtn">Details</a>
+                    </div>
+                </div>
+                <div class="productCard">
+                    <img src="https://i00.eu/img/711/1024x1024/ex7ssuk0/16041.jpg" alt="Product Image"/>
+                    <div class="cardDetails">
+                        <div class="insideCard">
+                            <p class="color-white">Matte Pomade</p>
+                            <p><span class="color-white">Price: $5.99</span></p>
+                        </div>
+                        <a href="#" id="detailsBtn">Details</a>
+                    </div>
+                </div>
+                <div class="productCard">
+                    <img src="https://i00.eu/img/711/1024x1024/ex7ssuk0/16041.jpg" alt="Product Image"/>
+                    <div class="cardDetails">
+                        <div class="insideCard">
+                            <p class="color-white">Matte Pomade</p>
+                            <p><span class="color-white">Price: $5.99</span></p>
+                        </div>
+                        <a href="#" id="detailsBtn">Details</a>
+                    </div>
+                </div>
+                <div class="productCard">
+                    <img src="https://i00.eu/img/711/1024x1024/ex7ssuk0/16041.jpg" alt="Product Image"/>
+                    <div class="cardDetails">
+                        <div class="insideCard">
+                            <p class="color-white">Matte Pomade</p>
+                            <p><span class="color-white">Price: $5.99</span></p>
+                        </div>
+                        <a href="#" id="detailsBtn">Details</a>
+                    </div>
+                </div>
+                <div class="productCard">
+                    <img src="https://i00.eu/img/711/1024x1024/ex7ssuk0/16041.jpg" alt="Product Image"/>
+                    <div class="cardDetails">
+                        <div class="insideCard">
+                            <p class="color-white">Matte Pomade</p>
+                            <p><span class="color-white">Price: $5.99</span></p>
+                        </div>
+                        <a href="#" id="detailsBtn">Details</a>
                     </div>
                 </div>
 
