--- a/src/Views/products.html
+++ b/src/Views/products.html
@@ -107,6 +107,7 @@
             </div>
         </div>
     </main>
+    <footer style="background-color: black; font-size: 15px; color: #fff; display: flex; align-items: center; justify-content: center;">All rights reserved. &copy</footer>
     <script src="./app.js"></script>
 </body>
 
