--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -25,6 +25,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  /* text-decoration:  2px whitesmoke underline;
+  text-underline-offset: 10px; */
 }
 
 .interaction-links {
@@ -392,7 +394,7 @@ form  input {
 
 .products{
   width: 100%;
-  height: 93%;
+  height: 91%;
   display: flex;
   justify-content: center;
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(12, 10, 10, 0.8)),
@@ -426,14 +428,16 @@ form  input {
 .productChildContainer{
   overflow-x: hidden;
   overflow-y: auto;
-  width: 1000px;
+  width: 1300px;
+  /* border: 10px solid white; */
+  height: 450px;
 display: flex;
 position: relative;
 bottom: 20px;
 flex-wrap: wrap;
 align-items: center;
 justify-content: center;
-border: 5px solid rgba(255, 255, 255, 0.15);
+/* border: 5px solid rgba(255, 255, 255, 0.15); */
 border-radius: 20px;
 }
 .productChildContainer::-webkit-scrollbar{
